fixed distortion for nav bar on event and home page

--- a/css/style.css
+++ b/css/style.css
@@ -1088,3 +1088,8 @@ h1, h2, h3, h4, h5,
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+
+.pd-9{
+  padding-top: 9%;
+}
